--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                 <button class="btn-q" data-s="BREN">BREN</button>
                 <button class="btn-q" data-s="ANTM">ANTM</button>
                 <button class="btn-q" data-s="INDF">INDF</button>
+                <button class="btn-q" data-s="BRMS">BRMS</button>
                 <button class="btn-refresh" id="btnRefresh" title="Refresh">
                     <i class="fas fa-sync-alt"></i>
                 </button>
@@ -862,3 +863,4 @@
 </body>
 
 </html>
+
